# bioMONAI

./: .gitignore  =2022.8.0  =3.1.1  README.md  bioMONAI-env.yml  bioMONAI-env_linux.yml  bioMONAI-linux.yml  bioMONAI-old.yml  bioMONAI-win.yml  biomonai-latest.txt  biomonai.yml  biomonai2.yml  callbacks.html  classification_tutorial.html  core.html  data.html  datasets.html  demo_ri2fl_2d.html  denoising_tutorial.html  denoising_tutorial2.html  denoising_tutorial_test.html  environment-ci.yml  environment.yaml  index.html  io.html  losses.html  metrics.html  nets.html  pyproject.toml  search.json  settings.ini  sitemap.xml  transforms.html  tutorial_1.html  tutorial_2.html  tutorial_3.html  tutorial_classification.html  visualize.html
Tutorials/: tutorial_classification3d.html  tutorial_denoising.html
_docs/: callbacks.html  classification_tutorial.html  core.html  data.html  datasets.html  demo_2.html  demo_ri2fl_2d.html  denoising_tutorial.html  denoising_tutorial_test.html  fourier_ring_correlation.html  index.html  io.html  losses.html  metrics.html  nets.html  search.json  sitemap.xml  template.html  transforms.html  tutorial_1.html  tutorial_2.html  tutorial_3.html  tutorial_4.html  tutorial_classification3d.html  tutorial_denoising.html  tutorial_multispectral_classification.html  visualize.html
_proc/: .gitignore  00_core.ipynb  01_data.ipynb  01_nets.ipynb  02_io.ipynb  02_losses.ipynb  03_data.ipynb  03_losses.ipynb  04_nets.ipynb  04_transforms.ipynb  05_io.ipynb  05_transforms.ipynb  06_datasets.ipynb  06_metrics.ipynb  07_callbacks.ipynb  =0.6.4  (+25 more)
(+105 files in other folders)
