[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "bioMONAI"
dynamic = ["version"]
description = "Deep learning library biomedical data built on top of MONAI and fastai"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
authors = [{name = "bmandracchia", email = "biagio.mandracchia@uva.es"}]
keywords = ['monai', 'pytorch', 'nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 2 - Pre-Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = []

[project.urls]
Repository = "https://github.com/deepCLEM/bioMONAI"
Documentation = "https://deepCLEM.github.io/bioMONAI"

[project.entry-points.nbdev]
bioMONAI = "bioMONAI._modidx:d"

[project.optional-dependencies]
dev = ['nbdev==3.0.10']

[tool.setuptools.dynamic]
version = {attr = "bioMONAI.__version__"}

[tool.setuptools.packages.find]
include = ["bioMONAI"]

[tool.nbdev]
